Add missing files

--- a/OrganizadorReuniao/Languages/pt-br.resx
+++ b/OrganizadorReuniao/Languages/pt-br.resx
@@ -250,7 +250,7 @@
     <value>Sucesso</value>
   </data>
   <data name="sundaySchool" xml:space="preserve">
-    <value>Escola Dominical</value>
+    <value>Escola Dominical - Adultos</value>
   </data>
   <data name="sundaySchoolYouth" xml:space="preserve">
     <value>Escola Dominical - Jovens</value>
